--- a/common/eslint-config-ts/package.json
+++ b/common/eslint-config-ts/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "eslint-config-custom",
+  "name": "eslint-config-ts",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-turbo": "^1.9.3",
