--- a/portals/horizon/package.json
+++ b/portals/horizon/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.13",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-ts": "workspace:*",
     "postcss": "^8.4.20",
     "tailwind-config": "workspace:*",
     "tailwindcss": "^3.2.4",
