--- a/common/ui/package.json
+++ b/common/ui/package.json
@@ -14,7 +14,8 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "check-types": "tsc --noEmit",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --fix src"
   },
   "peerDependencies": {
     "react": "^18.2.0"
