--- a/portals/horizon/package.json
+++ b/portals/horizon/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --fix src"
   },
   "dependencies": {
     "next": "^13.4.1",
