--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "turbo lint",
     "lint:fix": "turbo run lint:fix",
     "clean": "turbo clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -15,5 +16,8 @@
     "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.9.3"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@7.15.0",
+  "dependencies": {
+    "husky": "^8.0.3"
+  }
 }
