--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "lint": "turbo lint",
     "lint:fix": "turbo run lint:fix",
     "clean": "turbo clean",
+    "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-ts": "workspace:*",
+    "husky": "^8.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.9.3"
   },
-  "packageManager": "pnpm@7.15.0",
-  "dependencies": {
-    "husky": "^8.0.3"
-  }
+  "packageManager": "pnpm@7.15.0"
 }
