--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-ts": "workspace:*",
-    "husky": "^8.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.9.3"
+  },
+  "optionalDependencies": {
+    "husky": "^8.0.3"
   },
   "packageManager": "pnpm@8.2.0"
 }
