--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "start": "turbo start",
     "lint:fix": "turbo run lint:fix",
     "clean": "turbo clean",
     "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
