--- a/portals/horizon/package.json
+++ b/portals/horizon/package.json
@@ -2,6 +2,7 @@
   "name": "horizon",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@8.2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
