--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ dist/
 # ide
 .idea
 .vscode
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
