--- a/common/ui/package.json
+++ b/common/ui/package.json
@@ -30,5 +30,13 @@
     "tsconfig": "workspace:*",
     "tsup": "^6.1.3",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.241.0",
+    "tailwind-merge": "^1.13.1",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
