--- a/common/ts-template/package.json
+++ b/common/ts-template/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.16.17",
+    "dotenv": "^16.1.4",
     "envsafe": "^2.0.3",
     "eslint-config-ts": "workspace:*",
     "ts-node-dev": "^2.0.0",
