--- a/common/eslint-config-nextjs/package.json
+++ b/common/eslint-config-nextjs/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "eslint-config-ts",
+  "name": "eslint-config-nextjs",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^7.32.0",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.8.8"
+    "eslint-config-turbo": "^1.9.3",
+    "next": "^13.4.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
