--- a/common/ts-template/package.json
+++ b/common/ts-template/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --exit-child src/index.ts",
     "build": "tsc",
+    "lint": "eslint 'src/**/*.{ts, tsx}'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
