--- a/common/ui/package.json
+++ b/common/ui/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/react": "^18.2.5",
     "eslint": "^7.32.0",
-    "eslint-config-ts": "workspace:*",
+    "eslint-config-nextjs": "workspace:*",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "tailwind-config": "workspace:*",
