--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-ts": "workspace:*",
+    "eslint-config-nextjs": "workspace:*",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.10.3"
