--- a/portals/horizon/package.json
+++ b/portals/horizon/package.json
@@ -22,7 +22,7 @@
     "@types/react": "^18.2.10",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
-    "eslint-config-ts": "workspace:*",
+    "eslint-config-nextjs": "workspace:*",
     "postcss": "^8.4.24",
     "tailwind-config": "workspace:*",
     "tailwindcss": "^3.3.2",
