--- a/common/ts-template/package.json
+++ b/common/ts-template/package.json
@@ -7,16 +7,19 @@
     "dev": "ts-node-dev --exit-child src/index.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^18.16.17",
     "dotenv": "^16.1.4",
     "envsafe": "^2.0.3",
     "eslint-config-ts": "workspace:*",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.3"
