landon/por-14-move-ts-template-to-new-templates-package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "turbo clean",
     "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "turbo test"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
