orion, change scope to hub -> sqs queue

--- a/farcaster/orion/.env.example
+++ b/farcaster/orion/.env.example
@@ -1,3 +1,6 @@
-NODE_ENV=
-RANDOM_KEY=
-RANDOM_NUM=
+HUB_RPC_URL=
+SQS_URL=
+SQS_REGION=
+SQS_API_VERSION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
