--- a/farcaster/orion/package.json
+++ b/farcaster/orion/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --exit-child src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev --exit-child src/index.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
-    "gen-env": "sed 's/=.*/=/' .env > .env.example",
+    "gen-env": "sed 's/=.*/=/' .env.development > .env.example",
     "test": "jest"
   },
   "keywords": [],
@@ -24,5 +24,9 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@farcaster/hub-nodejs": "^0.8.0",
+    "aws-sdk": "^2.1398.0"
   }
 }
