--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ yarn-error.log*
 .env
 .env.local
 .env.development
+.env.production
+.env.staging
 .env.development.local
 .env.test.local
 .env.production.local
