--- a/farcaster/orion/package.json
+++ b/farcaster/orion/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev --exit-child src/index.ts",
     "build": "tsc",
+    "start": "NODE_ENV=production node dist/index.js",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
     "gen-env": "sed 's/=.*/=/' .env.development > .env.example",
     "test": "jest"
