--- a/farcaster/orion/kustomize/deployment.yaml
+++ b/farcaster/orion/kustomize/deployment.yaml
@@ -20,3 +20,5 @@ spec:
           envFrom:
             - secretRef:
                 name: prod-orion-keys
+            - secretRef:
+                name: orion-sqs-iam
