update branches so i can merge

--- a/.github/workflows/deploy_orion.yml
+++ b/.github/workflows/deploy_orion.yml
@@ -2,7 +2,7 @@ name: Build & Deploy Orion
 
 on:
   push:
-    branches: [main, 'landon/prtls-11-create-ts-service-for-hub-db']
+    branches: [main']
     paths:
       - 'farcaster/orion/**'
 
