--- a/farcaster/hub-queue-consumer/package.json
+++ b/farcaster/hub-queue-consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqs-consumer",
+  "name": "hub-queue-consumer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@farcaster/hub-nodejs": "^0.8.0",
-    "aws-sdk": "^2.1398.0"
+    "@aws-sdk/client-sqs": "^3.354.0",
+    "@farcaster/hub-nodejs": "^0.8.0"
   }
 }
