--- a/farcaster/hub-queue-consumer/package.json
+++ b/farcaster/hub-queue-consumer/package.json
@@ -9,6 +9,9 @@
     "start": "NODE_ENV=production node dist/index.js",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
     "gen-env": "sed 's/=.*/=/' .env.development > .env.example",
+    "migration:up": "tsx scripts/migrateUp.ts",
+    "migration:down": "tsx scripts/migrateDown.ts",
+    "migration:generate": "tsx scripts/generateMigration.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -22,12 +25,20 @@
     "eslint-config-ts": "workspace:*",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig": "workspace:*",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.354.0",
-    "@farcaster/hub-nodejs": "^0.8.0"
+    "@farcaster/hub-nodejs": "^0.8.0",
+    "@planetscale/database": "^1.7.0",
+    "@types/pg": "^8.10.2",
+    "kysely": "^0.25.0",
+    "kysely-planetscale": "^1.3.0",
+    "pg": "^8.11.0",
+    "sqs-consumer": "^7.2.0"
   }
 }
