--- a/farcaster/hub-queue-consumer/package.json
+++ b/farcaster/hub-queue-consumer/package.json
@@ -34,10 +34,9 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.354.0",
     "@farcaster/hub-nodejs": "^0.8.0",
-    "@planetscale/database": "^1.7.0",
+    "@portals/database-manager": "workspace:*",
     "@types/pg": "^8.10.2",
     "kysely": "^0.25.0",
-    "kysely-planetscale": "^1.3.0",
     "pg": "^8.11.0",
     "sqs-consumer": "^7.2.0"
   }
