--- a/portals/database-manager/package.json
+++ b/portals/database-manager/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "database-manager",
+  "name": "@portals/database-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "migration:generate": "tsx scripts/genMigration.ts",
     "migrate:up:prod": "cross-env NODE_ENV=production tsx scripts/migrateUp.ts",
     "migrate:down:prod": "cross-env NODE_ENV=production tsx scripts/migrateDown.ts",
@@ -31,6 +32,7 @@
     "cross-env": "^7.0.3",
     "kysely": "^0.25.0",
     "pg": "^8.11.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "rimraf": "^5.0.1"
   }
 }
