--- a/farcaster/hub-queue-consumer/package.json
+++ b/farcaster/hub-queue-consumer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev --exit-child src/index.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child src/index.ts",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
@@ -36,6 +36,7 @@
     "@farcaster/hub-nodejs": "^0.8.0",
     "@portals/database-manager": "workspace:*",
     "@types/pg": "^8.10.2",
+    "cross-env": "^7.0.3",
     "kysely": "^0.25.0",
     "pg": "^8.11.0",
     "sqs-consumer": "^7.2.0"
