--- a/farcaster/hub-queue-consumer/Dockerfile
+++ b/farcaster/hub-queue-consumer/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 RUN npm install -g pnpm
 RUN npm install -g turbo
 COPY . .
-RUN turbo prune --scope=orion --docker
+RUN turbo prune --scope=hub-queue-consumer --docker
 
 FROM base AS installer
 RUN apk add --no-cache libc6-compat
@@ -26,7 +26,7 @@ RUN pnpm install
 COPY --from=builder /app/out/full/ .
 COPY turbo.json turbo.json
 
-RUN turbo run build --filter=orion...
+RUN turbo run build --filter=hub-queue-consumer...
 
 FROM base AS runner
 WORKDIR /app
@@ -40,4 +40,4 @@ COPY --from=installer /app .
 
 ENV NODE_ENV=production
 
-CMD node farcaster/orion/dist/index.js
+CMD node farcaster/hub-queue-consumer/dist/index.js
