--- a/farcaster/hub-queue-consumer/kustomize/deployment.yaml
+++ b/farcaster/hub-queue-consumer/kustomize/deployment.yaml
@@ -1,24 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: orion
+  name: hub-queue-consumer
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: orion
+      app: hub-queue-consumer
   template:
     metadata:
       labels:
-        app: orion
+        app: hub-queue-consumer
     spec:
       containers:
-        - name: orion
-          image: registry.digitalocean.com/portals-registry/portals-orion:latest
+        - name: hub-queue-consumer
+          image: registry.digitalocean.com/portals-registry/portals-queue-consumer:latest
           ports:
             - containerPort: 3000
           envFrom:
             - secretRef:
-                name: prod-orion-keys
-            - secretRef:
-                name: orion-sqs-iam
+                name: prod-queue-consumer-keys
