--- a/.github/workflows/deploy_orion.yml
+++ b/.github/workflows/deploy_orion.yml
@@ -2,7 +2,7 @@ name: Build & Deploy Orion
 
 on:
   push:
-    branches: [main']
+    branches: [ 'main' ]
     paths:
       - 'farcaster/orion/**'
 
