--- a/portals/database-manager/package.json
+++ b/portals/database-manager/package.json
@@ -32,7 +32,9 @@
     "@farcaster/hub-nodejs": "^0.8.0",
     "cross-env": "^7.0.3",
     "kysely": "^0.25.0",
+    "kysely-postgres-js": "^1.1.1",
     "pg": "^8.11.0",
+    "postgres": "^3.3.5",
     "readline": "^1.3.0",
     "rimraf": "^5.0.1"
   }
