--- a/portals/database-manager/tsconfig.json
+++ b/portals/database-manager/tsconfig.json
@@ -1,24 +1,17 @@
 {
-  "extends": [
-    "tsconfig/base.json"
-  ],
+  "extends": "tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": ".",
-    "strict": true,
-    "moduleResolution": "node",
+    "outDir": "dist/",
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "target": "es6",
-    "module": "CommonJS",
-    "declaration": true,
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "noImplicitReturns": true
   },
-  "include": [
-    "src/**/*.ts"
+  "exclude": [
+    "dist/"
   ]
 }
