--- a/portals/database-manager/tsconfig.json
+++ b/portals/database-manager/tsconfig.json
@@ -1,17 +1,24 @@
 {
-  "extends": "tsconfig/base.json",
+  "extends": [
+    "tsconfig/base.json"
+  ],
   "compilerOptions": {
-    "outDir": "dist/",
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "baseUrl": ".",
     "strict": true,
-    "skipLibCheck": true,
-    "noImplicitReturns": true
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "target": "es6",
+    "module": "CommonJS",
+    "declaration": true,
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    }
   },
-  "exclude": [
-    "dist/"
+  "include": [
+    "src/**/*.ts"
   ]
 }
