--- a/farcaster/hub-backfiller/tsconfig.json
+++ b/farcaster/hub-backfiller/tsconfig.json
@@ -1,17 +1,7 @@
 {
   "extends": "tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist/",
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "noImplicitReturns": true
+    "outDir": "dist/"
   },
-  "exclude": [
-    "dist/"
-  ]
+  "exclude": ["dist/"]
 }
