--- a/templates/ts-template/package.json
+++ b/templates/ts-template/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --exit-child src/index.ts",
-    "build": "tsc",
+    "build-real": "tsc",
     "lint": "eslint 'src/**/*.{ts, tsx}'",
     "gen-env": "sed 's/=.*/=/' .env > .env.example",
     "test": "jest"
