--- a/farcaster/hub-backfiller/package.json
+++ b/farcaster/hub-backfiller/package.json
@@ -25,7 +25,6 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig": "workspace:*",
-    "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   },
   "dependencies": {
@@ -40,6 +39,7 @@
     "pg": "^8.11.0",
     "postgres": "^3.3.5",
     "pretty-ms": "^8.0.0",
-    "sqs-consumer": "^7.2.0"
+    "sqs-consumer": "^7.2.0",
+    "tsx": "^3.12.7"
   }
 }
