--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,7 @@
 packages:
   # - "apps/*"
-  - "common/*"
-  - "portals/*"
-  - "farcaster/*"
+  - 'common/*'
+  - 'portals/*'
+  - 'farcaster/*'
+  - 'farcaster/**'
+
